# autoresearch-semblend

./: .gitignore  analysis.ipynb  compute_breakeven.py  prepare.py  program.md  pyproject.toml  results.tsv  rope_force_delta_results.json  run_all_benchmarks.sh  run_experiment.py  run_remaining_benchmarks.sh
benchmarks/e2e/: bathtub_calibration_bench.py  bootstrap_ci.py  breakeven_analysis_bench.py  breakeven_empirical_bench.py  build_clusters.py  cagra_search_benchmark.py  chunk_size_ablation_bench.py  chunk_size_e2e_ablation.py  cli.py  code_gen_bench.py  component_bench.py  config.py  cross_instruction_bench.py  customer_support_bench.py  dataset_loader.py  donor_scaling_bench.py  embedding_ablation_bench.py  empirical_measure.py  enterprise_rag_bench.py  entity_swap_bench.py  eos_collapse_bench.py  kv_bench.py  kv_donor_bench.py  kv_prefix_bench.py  layer_entropy_bench.py  lmcache_comparison.py  longctx_throughput_bench.py  microbench.py  multitenant_api_bench.py  multiturn_dialogue_bench.py  operating_envelope_bench.py  partial_attention_bench.py  port_forward_keepalive.sh  prefix_cache_baseline_bench.py  prometheus_breakdown.py  pyproject.toml  quality_bench.py  quick_measure.py  real_dataset_builder.py  realistic_cross_instruction_bench.py  (+39 more)
benchmarks/e2e/bench_datasets/: __init__.py  bitext.py  loader.py  multinews.py  sharegpt.py
benchmarks/e2e/clients/: __init__.py  synapse_client.py  vllm_client.py
benchmarks/e2e/datasets/: __init__.py  bitext.py  loader.py  multinews.py  sharegpt.py
benchmarks/e2e/metrics/: __init__.py  latency.py  quality.py
(+44 files in other folders)
