[project]
name = "autoresearch-semblend"
version = "0.1.0"
description = "Autonomous SemBlend research: KV-cache reuse experiments via agent loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "onnxruntime>=1.18.0; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "pandas>=2.3.3",
    "pytest>=8.0.0",
    "rapidfuzz>=3.6.0",
    "requests>=2.32.0",
    "rouge-score>=0.1.2",
    "sentence-transformers>=3.0.0; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "transformers>=4.40.0",
]

[tool.pytest.ini_options]
# Skip tests that require torch/triton (GPU-only, run in EKS)
addopts = "--ignore=synapse_kv_connector/tests/test_rope_correction.py --ignore=synapse_kv_connector/tests/test_triton_kernels.py"
